--- a/Revamedia/src/app/Components/profile/profile.component.html
+++ b/Revamedia/src/app/Components/profile/profile.component.html
@@ -22,18 +22,19 @@
       </div>
 
       <div class="right-card">
-        <!-- *ngIf="user?.username != currentUser?.username" -->
-        <div class="right-card-container">
+        <div class="right-card-container" *ngIf="user?.username != currentUser?.username">
           <form #followForm="ngForm" (ngSubmit)="followUser(followForm)" >
-            <input type="hidden" ngModel="{{ currentUser?.userId }}" name="followedId">
-            <input type="hidden" ngModel="{{ user?.userId }}" name="followerId">
+            <input type="hidden" ngModel="{{ currentUser?.userId }}" name="followerId">
+            <input type="hidden" ngModel="{{ user?.userId }}" name="followedId">
             <button>Follow</button>
           </form>
+
           <form #unFollowForm="ngForm" (ngSubmit)="unFollowUser(unFollowForm)">
-            <input type="hidden" ngModel="{{ currentUser?.userId }}" name="followedId">
-            <input type="hidden" ngModel="{{ user?.userId }}" name="followerId">
+            <input type="hidden" ngModel="{{ currentUser?.userId }}" name="follower_Id">
+            <input type="hidden" ngModel="{{ user?.userId }}" name="followed_Id">
             <button id="unFollow">Unfollow</button>
           </form>
+
         </div>
         <h5 (click)="openModal('followers', user)">{{ user?.followers.length }} Follower</h5>
         <h5 (click)="openModal('following', user)">{{ user?.following.length }} Following</h5>
