--- a/Revamedia/src/app/Components/forgot/forgot.component.html
+++ b/Revamedia/src/app/Components/forgot/forgot.component.html
@@ -21,6 +21,9 @@
         <button type="submit">Submit</button>
       </div>
     </form>
+    <div class="forgot-help">
+      <span>Rememered your password?<a routerLink="/login" routerLinkActive="active">Login</a></span>
+    </div>
   </div>
 </div>
 
