--- a/Revamedia/src/app/Components/forgot/forgot.component.scss
+++ b/Revamedia/src/app/Components/forgot/forgot.component.scss
@@ -114,6 +114,22 @@ $darkgrey: rgb(61, 66, 74);
         }
       }
     }
+    .forgot-help{
+      display: flex;
+      flex-direction:column;
+      align-items: center;
+      color: $darkgrey;
+      font-size: .9rem;
+      a{
+        text-decoration: none;
+        color: $darkgrey;
+        font-size: 1rem;
+        cursor: pointer;
+        &:hover{
+          text-decoration: underline;
+        }
+      }
+    }
   }
 }
 
