--- a/Revamedia/src/app/Components/home/home.component.html
+++ b/Revamedia/src/app/Components/home/home.component.html
@@ -11,7 +11,12 @@
         </div>
       </div>
     </div>
-    <button (click)="openModal('add','post-modal', user)">Add Post</button>
+    <div class="right-side">
+      <form class="searchUser">
+        <input type="search" id="search-user" placeholder="Search users...">
+      </form>
+      <button (click)="openModal('add','post-modal', user)">Add Post</button>
+    </div>
   </div>
   <!-- Page title End -->
 
