--- a/Revamedia/src/app/Components/home/home.component.scss
+++ b/Revamedia/src/app/Components/home/home.component.scss
@@ -23,6 +23,7 @@ $darkgrey: rgb(61,66,74);
     border-bottom: .7px solid $lightgrey;
     padding-bottom: .5rem;
     .card{
+      width: 50%;
       h3{
         font-size: 1.5rem;
         font-weight: bold;
@@ -56,19 +57,41 @@ $darkgrey: rgb(61,66,74);
         }
       }
     }
-    button{
-      border: none;
-      background: $orange;
-      font-size: 1rem;
-      border-radius: 5px;
-      border: none;
-      outline: none;
-      padding: .5rem 1rem;
-      cursor: pointer;
-      color: black;
-      transition: all .3s ease-in-out;
-      &:hover{
-        background: $blue;
+    .right-side{
+      width: 40%;
+      display: flex;
+      flex-direction: row;
+      align-items: center;
+      justify-content:space-between;
+      form{
+        input{
+          width: 15rem;
+          font-size: 1rem;
+          border: 1.2px solid $grey;
+          outline: none;
+          border-radius: 8px;
+          padding: .5rem 1rem;
+          color: $darkgrey;
+          &:focus{
+            border: 1.2px solid $orange;
+          }
+
+        }
+      }
+      button{
+        border: none;
+        background: $orange;
+        font-size: 1rem;
+        border-radius: 5px;
+        border: none;
+        outline: none;
+        padding: .5rem 1rem;
+        cursor: pointer;
+        color: black;
+        transition: all .3s ease-in-out;
+        &:hover{
+          background: $blue;
+        }
       }
     }
   }
