--- a/Revamedia/src/app/Components/home/home.component.scss
+++ b/Revamedia/src/app/Components/home/home.component.scss
@@ -65,7 +65,7 @@ $darkgrey: rgb(61,66,74);
       justify-content:space-between;
       form{
         input{
-          width: 15rem;
+          width: 17rem;
           font-size: 1rem;
           border: 1.2px solid $grey;
           outline: none;
@@ -80,23 +80,36 @@ $darkgrey: rgb(61,66,74);
           display: flex;
           flex-direction: column;
           position: absolute;
-          top: 12%;
+          top: 13%;
           background: $lightgrey;
-          width: 15rem;
+          width: 17rem;
+          padding: .5rem;
           border-bottom-left-radius: 8px;
           border-bottom-right-radius: 8px;
           .userFound{
             width: 100%;
-            p{
+            .user{
+              width: 100%;
+              display: flex;
+              flex-direction: row;
+              align-items: center;
+              justify-content: flex-start;
               cursor: pointer;
               padding: .5rem 0;
-              width: 100%;
-              text-align: center;
-              color: black;
-              font-size: 1rem;
-              font-weight: 700;
               border-bottom: 1px solid $grey;
               background-color:$lightgrey;
+              img{
+                border-radius: 50%;
+                width: 1.5rem;
+                height: 1.5rem;
+                border: 1px solid $blue;
+              }
+              p{
+                color: black;
+                font-size: 1rem;
+                font-weight: 700;
+                margin-left: .5rem;
+              }
               &:hover{
                 background-color: $grey;
               }
@@ -123,11 +136,56 @@ $darkgrey: rgb(61,66,74);
   }
   @media screen and (max-width: 800px){
     .page-title{
-      padding: .5rem 1rem;
-      button{
-        font-size: .9rem;
-        border-radius: 7px;
-        padding: .4rem .8rem;
+      width: 100%;
+      padding-right: 0;
+      display: flex;
+      flex-direction: column;
+      .card{
+        width: 100%;
+        h3{
+          font-size: 1.25rem;
+        }
+      }
+      .right-side{
+        margin-top: .5rem;
+        width: 100%;
+        form{
+          input{
+            width: 15rem;
+            font-size: 1rem;
+            border: 1.2px solid $grey;
+            outline: none;
+            border-radius: 5px;
+            padding: .5rem;
+            color: $darkgrey;
+            &:focus{
+              border: 1.2px solid $orange;
+            }
+          }
+          .users-list{
+            display: flex;
+            flex-direction: column;
+            position: absolute;
+            top: 18%;
+            width: 15rem;
+            padding: .25rem;
+          }
+        }
+        button{
+          border: none;
+          background: $orange;
+          font-size: 1rem;
+          border-radius: 5px;
+          border: none;
+          outline: none;
+          padding: .5rem 1rem;
+          cursor: pointer;
+          color: black;
+          transition: all .3s ease-in-out;
+          &:hover{
+            background: $blue;
+          }
+        }
       }
     }
   }
