--- a/Revamedia/src/app/Components/home/home.component.scss
+++ b/Revamedia/src/app/Components/home/home.component.scss
@@ -77,10 +77,10 @@ $darkgrey: rgb(61,66,74);
           }
         }
         .users-list{
+          transform:translate(0%, 0%);
           display: flex;
           flex-direction: column;
           position: absolute;
-          top: 13%;
           background: $lightgrey;
           width: 17rem;
           padding: .5rem;
