--- a/Revamedia/src/app/Components/home/home.component.scss
+++ b/Revamedia/src/app/Components/home/home.component.scss
@@ -77,12 +77,14 @@ $darkgrey: rgb(61,66,74);
           }
         }
         .users-list{
+          transform:translate(0%, 0%);
           display: flex;
           flex-direction: column;
           position: absolute;
-          top: 13%;
           background: $lightgrey;
           width: 17rem;
+          max-height: 40vh;
+          overflow-y: scroll;
           padding: .5rem;
           border-bottom-left-radius: 8px;
           border-bottom-right-radius: 8px;
