--- a/Revamedia/src/app/Components/home/home.component.html
+++ b/Revamedia/src/app/Components/home/home.component.html
@@ -16,7 +16,7 @@
         <input type="search" #searchValue id="search-user" placeholder="Search users..." (keyup)="searchUser(searchValue.value)">
         <div class="users-list" *ngIf="allUsers.length != 0">
           <div *ngFor="let u of allUsers" class="userFound">
-            <div class="user" (click)="goToProfile(u?.userId)" title="View Profile">
+            <div class="user" (click)="goToProfile(u?.userId)" title="View {{u?.username}}'s Profile">
               <p>{{u?.username}}</p>
             </div>
           </div>
