--- a/Revamedia/src/app/Components/home/home.component.scss
+++ b/Revamedia/src/app/Components/home/home.component.scss
@@ -81,7 +81,7 @@ $darkgrey: rgb(61,66,74);
           display: flex;
           flex-direction: column;
           position: absolute;
-          background: $lightgrey;
+          background: rgb(234, 234, 234);
           width: 17rem;
           max-height: 40vh;
           overflow-y: scroll;
@@ -868,7 +868,7 @@ $darkgrey: rgb(61,66,74);
 .screen{
   position: fixed;
   z-index: 10;
-  background-color: rgba(0, 0, 0, 0.38);
+  background-color: rgba(0, 0, 0, 0.002);
   top: -100%;
   left: -100%;
   opacity: 0;
