--- a/Revamedia/src/app/Components/profile/profile.component.html
+++ b/Revamedia/src/app/Components/profile/profile.component.html
@@ -23,7 +23,7 @@
 
       <div class="right-card">
         <!-- *ngIf="user?.username != currentUser?.username" -->
-        <div class="right-card-container">
+        <div class="right-card-container" *ngIf="user?.username != currentUser?.username">
           <form #followForm="ngForm" (ngSubmit)="followUser(followForm)" >
             <input type="hidden" ngModel="{{ currentUser?.userId }}" name="followedId">
             <input type="hidden" ngModel="{{ user?.userId }}" name="followerId">
