--- a/Revamedia/src/app/Components/home/home.component.scss
+++ b/Revamedia/src/app/Components/home/home.component.scss
@@ -299,17 +299,24 @@ $darkgrey: rgb(61,66,74);
             border-top: 1px solid $lightgrey;
             padding:1rem;
             .container{
-              width: 25%;
               display: flex;
               flex-direction: row;
-              justify-content: space-between;
+              justify-content: space-evenly;
               .likes{
-                #heartIcon{
+                .NoLike{
                   color: pink;
                   cursor: pointer;
                   transition: all .3s ease-in-out;
                   &:hover{
                     color: red;
+                  }
+                }
+                .OneLike{
+                  color: red;
+                  cursor: pointer;
+                  transition: all .3s ease-in-out;
+                  &:hover{
+                    color: rgb(187, 0, 0);
                   }
                 }
                 span{
@@ -318,6 +325,15 @@ $darkgrey: rgb(61,66,74);
                 }
               }
               .comment{
+                margin-left: 1rem;
+                cursor: pointer;
+                span{
+                  font-size: .8rem;
+                  color: $grey;
+                  &:hover{
+                    color: $darkgrey;
+                  }
+                }
                 #commentIcon{
                   color: lightblue;
                   cursor: pointer;
