--- a/Revamedia/src/app/Components/profile/profile.component.scss
+++ b/Revamedia/src/app/Components/profile/profile.component.scss
@@ -259,30 +259,12 @@ $darkgrey: rgb(61,66,74);
           margin-right: .25rem;
         }
       }
-      .follow-option{
-        button{
-          border: none;
-          background: $blue;
-          font-size: 1rem;
-          border-radius: 4px;
-          cursor: pointer;
-          padding: .3rem .6rem;
-          margin-left: .5rem;
-          &:hover{
-            background-color: #469cbe;
-          }
-        }
-        #unfollow{
-          border: none;
-          background: $orange;
-          font-size: 1rem;
-          border-radius: 4px;
-          cursor: pointer;
-          padding: .3rem .6rem;
-          margin-left: .5rem;
-          &:hover{
-            background-color: #dc943c;
-          }
+      span{
+        cursor: pointer;
+        color: $darkgrey;
+        &:hover{
+          text-decoration: underline;
+          color: $blue;
         }
       }
     }
@@ -298,7 +280,7 @@ $darkgrey: rgb(61,66,74);
 
 .openModal{
   top: 20%;
-  right: 27%;
+  right: 30%;
   transform: scale(1);
 }
 // media queries for modals
