add youtube link

--- a/Revamedia/src/app/Components/profile/profile.component.scss
+++ b/Revamedia/src/app/Components/profile/profile.component.scss
@@ -254,9 +254,9 @@ $darkgrey: rgb(61,66,74);
           border: 1.2px solid $orange;
         }
         h5{
-          font-size: 1rem;
+          font-size: 1.1rem;
           color: $darkgrey;
-          margin-right: .25rem;
+          margin-left: .5rem;
         }
       }
       span{
