--- a/Revamedia/src/app/Components/home/home.component.html
+++ b/Revamedia/src/app/Components/home/home.component.html
@@ -21,7 +21,10 @@
           </div>
         </div>
       </form>
-      <button (click)="openModal('add','post-modal', user)">Add Post</button>
+      <div class="buttons">
+        <button (click)="openModal('add','post-modal', user)">Add Post</button>
+        <button (click)="openModal('add','youtube-modal', user)" id="share-youtube">Share Video</button>
+      </div>
     </div>
   </div>
   <!-- Page title End -->
@@ -44,7 +47,10 @@
             </div>
           </div>
           <div class="post-body">
-            <img src="{{ p?.image }}" alt="{{p?.image}}">
+            <img src="{{ p?.image }}" alt="{{p?.image}}" *ngIf="p?.image !== null">
+            <div class="youtubeLink">
+              <h2 *ngIf="p?.image === null">Youtube: <a href="{{p?.youtubeLink}}" title="{{p?.youtubeLink}}" target="_blank" >{{p?.youtubeLink}}</a></h2>
+            </div>
             <div class="post-description" id="setBackgroundColor">
               <p><a routerLink="/profile" routerLinkActive="active">{{ user?.username }}</a>{{p?.message}}</p>
             </div>
@@ -190,15 +196,15 @@
       </div>
     <!-- post end -->
 
-      <!-- NO POST AVAILABLE START-->
-      <div class="noPost" *ngIf="posts.length == 0">
+    <!-- NO POST AVAILABLE START-->
+    <div class="noPost" *ngIf="posts.length == 0">
 
-        <h1>No Post</h1>
-        <p>Seems like there are no posts available to show</p>
-        <p>Sorry for the inconvience.</p>
-        <span>Be the first to make a post.</span>
-      </div>
-      <!-- NO POST AVAILABLE END-->
+      <h1>No Post</h1>
+      <p>Seems like there are no posts available to show</p>
+      <p>Sorry for the inconvience.</p>
+      <span>Be the first to make a post.</span>
+    </div>
+    <!-- NO POST AVAILABLE END-->
   </div>
   <!-- main feed end -->
 </div>
@@ -215,8 +221,8 @@
   </div>
   <form  #addPostForm="ngForm">
     <div class="form-data">
-      <h4>Add Image or Youtube Link</h4>
-      <input type="text" name="image" id="image" placeholder="ImageUrl or Youtube Link">
+      <h4>Add Image Link</h4>
+      <input type="text" name="image" id="image" placeholder="Image url...">
     </div>
     <div class="form-data">
       <input type="hidden" name="userId" ngModel="{{ post?.userId }}">
@@ -275,10 +281,10 @@
     <h3>Edit comment</h3>
     <span (click)="closeModal('edit', 'comment-modal')">x</span>
   </div>
-  <form #editCommentForm="ngForm" (ngSubmit)="onEditComment(editCommentForm)">
+  <form #editCommentForm="ngForm" (ngSubmit)="onEditComment(editCommentForm)" ngNativeValidate>
     <input type="hidden" name="comment_id" ngModel="{{ editComment?.commentId }}">
     <div class="form-data">
-      <textarea ngModel="{{ editComment?.message }}" name="message" rows="4"></textarea>
+      <textarea ngModel="{{ editComment?.message }}" name="message" required rows="4"></textarea>
     </div>
     <div class="post-submit">
       <button>Update comment</button>
@@ -310,10 +316,10 @@
     <h3>Edit Reply</h3>
     <span (click)="closeModal('edit', 'reply-modal')">x</span>
   </div>
-  <form #editReplyForm="ngForm" (ngSubmit)="onEditReply(editReplyForm)">
+  <form #editReplyForm="ngForm" (ngSubmit)="onEditReply(editReplyForm)" ngNativeValidate>
     <input type="hidden" name="reply_id" ngModel="{{ editReply?.replyId }}">
     <div class="form-data">
-      <textarea ngModel="{{ editReply?.message }}" name="message" rows="4"></textarea>
+      <textarea ngModel="{{ editReply?.message }}" required name="message" rows="4"></textarea>
     </div>
     <div class="post-submit">
       <button>Update Reply</button>
@@ -326,7 +332,7 @@
 <div class="modal" id="delete-reply-modal">
   <div class="form-header">
     <h3>Delete reply</h3>
-    <span (click)="closeModal('delete',  'reply-modal')">x</span>
+    <span (click)="closeModal('delete', 'reply-modal')">x</span>
   </div>
   <form (ngSubmit)="onDeleteReply(deleteReply?.replyId)">
     <h2>Are you sure you want to delete this reply?</h2>
@@ -337,6 +343,35 @@
   </form>
 </div>
 <!-- delete COMMENT FORM END -->
+
+<!-- ADD Youtube FORM START -->
+<div class="modal" id="add-youtube-modal">
+  <div class="form-header">
+    <h3>Share Youtube Video</h3>
+    <span (click)="closeModal('add', 'youtube-modal')">x</span>
+  </div>
+  <form #youtubePost="ngForm" (ngSubmit)="shareVideo(youtubePost)" ngNativeValidate>
+    <div class="form-data">
+      <h4>Enter Youtube Link</h4>
+      <input
+        type="url"
+        ngModel
+        name="youtubeLink"
+        placeholder="Youtube Url..."
+        pattern="(?:https?:\/\/)?(?:www\.)?youtu(?:\.be\/|be.com\/\S*(?:watch|embed)(?:(?:(?=\/[-a-zA-Z0-9_]{11,}(?!\S))\/)|(?:\S*v=|v\/)))([-a-zA-Z0-9_]{11,})"
+        >
+    </div>
+    <div class="form-data">
+      <input type="hidden" name="userId" ngModel="{{ user?.userId }}">
+      <h4>Write a caption</h4>
+      <textarea name="message" ngModel placeholder="Write a caption..." required rows="4"></textarea>
+    </div>
+    <div class="post-submit">
+      <button>Share</button>
+    </div>
+  </form>
+</div>
+<!-- ADD POST FORM END -->
 
 <!-- <div class="file-input">
   <input type="file" id="file" class="file" (change)="fileName($event, 'edit-post')">
