--- a/Revamedia/src/app/Components/home/home.component.scss
+++ b/Revamedia/src/app/Components/home/home.component.scss
@@ -70,7 +70,7 @@ $darkgrey: rgb(61, 66, 74);
     }
 
     .right-side {
-      width: 40%;
+      width: 45%;
       display: flex;
       flex-direction: row;
       align-items: center;
@@ -131,27 +131,50 @@ $darkgrey: rgb(61, 66, 74);
           }
         }
       }
-
-      button {
-        border: none;
-        background: $orange;
-        font-size: 1rem;
-        border-radius: 5px;
-        border: none;
-        outline: none;
-        padding: .5rem 1rem;
-        cursor: pointer;
-        color: black;
-        transition: all .3s ease-in-out;
-
-        &:hover {
-          background: $blue;
+      .buttons{
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        justify-content: space-between;
+        button {
+          border: none;
+          background: $orange;
+          font-size: 1rem;
+          border-radius: 5px;
+          border: none;
+          outline: none;
+          padding: .5rem;
+          cursor: pointer;
+          color: black;
+          transition: all .3s ease-in-out;
+          &:hover {
+            background: $blue;
+          }
+        }
+        #share-youtube{
+          margin-left: 2rem;
+          border: none;
+          background: rgb(193, 0, 0);
+          font-size: 1rem;
+          border-radius: 5px;
+          border: none;
+          outline: none;
+          padding: .5rem;
+          cursor: pointer;
+          color: white;
+          transition: all .3s ease-in-out;
+          &:hover {
+            background: rgb(127, 0, 0);
+          }
         }
       }
     }
   }
 
   @media screen and (max-width: 800px) {
+    body{
+      background: $lightgrey;
+    }
     .page-title {
       width: 100%;
       padding-right: 0;
@@ -167,9 +190,8 @@ $darkgrey: rgb(61, 66, 74);
       }
 
       .right-side {
-        margin-top: .5rem;
         width: 100%;
-
+        justify-content: space-evenly;
         form {
           input {
             width: 15rem;
@@ -194,10 +216,20 @@ $darkgrey: rgb(61, 66, 74);
             padding: .25rem;
           }
         }
-
-        button {
-          border-radius: 3px;
-          padding: .5rem;
+        .buttons{
+          display: flex;
+          flex-direction: column;
+          align-items: center;
+          justify-content: center;
+          button {
+            font-size: .9rem;
+            border-radius: 5px;
+          }
+          #share-youtube{
+            margin-top:.5rem;
+            margin-left: 0;
+            font-size: .9rem;
+          }
         }
       }
     }
@@ -316,6 +348,25 @@ $darkgrey: rgb(61, 66, 74);
           img {
             width: 100%;
             object-fit: cover;
+          }
+          .youtubeLink{
+            padding: 2rem .5rem;
+            width: 100%;
+            border-bottom: 1px solid $lightgrey;
+            h2{
+              width: 100%;
+              font-size: 1.3rem;
+              color: $darkgrey;
+              a{
+                cursor: pointer;
+                font-weight: normal;
+                text-decoration: none;
+                color: $blue;
+                &:hover,&:focus{
+                  text-decoration: underline;
+                }
+              }
+            }
           }
 
           .post-description {
@@ -1051,7 +1102,7 @@ $darkgrey: rgb(61, 66, 74);
     align-items: center;
 
     h3 {
-      font-size: 2.5rem;
+      font-size: 2.2rem;
       color: $darkgrey;
       text-decoration: underline;
     }
@@ -1241,7 +1292,7 @@ $darkgrey: rgb(61, 66, 74);
 }
 
 .openModal {
-  top: 5%;
+  top: 9%;
   left: 20%;
   transform: scale(1);
 }
