--- a/Revamedia/src/app/Components/home/home.component.html
+++ b/Revamedia/src/app/Components/home/home.component.html
@@ -41,8 +41,10 @@
             <div class="post-options">
               <fa-icon (click)="togglePostsOptions()" id="icon" [icon]="faEllipsis"></fa-icon>
               <ul *ngIf="postsOptionsClicked" id="postOptionMenu">
-                <li (click)="openModal('edit','post-modal', p)">Edit Post</li>
-                <li  (click)="openModal('delete', 'post-modal', p)">Delete Post</li>
+                <li (click)="openModal('edit','post-modal', p)" *ngIf="p?.image !== null">Edit Post</li>
+                <li (click)="openModal('delete', 'post-modal', p)" *ngIf="p?.image !== null">Delete Post</li>
+                <li (click)="openModal('edit', 'youtube-modal', p)" *ngIf="p?.image === null">Edit Post</li>
+                <li (click)="openModal('delete', 'youtube-modal', p)" *ngIf="p?.image === null">Delete Post</li>
               </ul>
             </div>
           </div>
@@ -128,7 +130,7 @@
             </div>
             <div class="comment-content">
               <p>{{ comment?.message }}</p>
-              <img *ngIf="comment?.giphyUrl != null" src="{{ comment?.giphyUrl }}" alt="Attached Image">
+              <img *ngIf="comment?.giphyUrl !== ''" src="{{ comment?.giphyUrl }}" alt="Attached Image">
             </div>
 
             <div class="reply-card">
@@ -185,7 +187,7 @@
               </div>
               <div class="reply-content">
                 <p>{{ reply?.message }}</p>
-                <img src="{{ reply?.giphyUrl }}" *ngIf="reply?.giphyUrl != null" alt="Attached Image">
+                <img src="{{ reply?.giphyUrl }}" *ngIf="reply?.giphyUrl !== ''" alt="Attached Image">
               </div>
             </div>
             <!-- Replies End -->
@@ -371,12 +373,49 @@
     </div>
   </form>
 </div>
-<!-- ADD POST FORM END -->
+<!-- ADD YOUTUBE FORM END -->
 
-<!-- <div class="file-input">
-  <input type="file" id="file" class="file" (change)="fileName($event, 'edit-post')">
-  <label for="file">
-    Select File
-  </label>
-  <p class="file-name" id="edit-post-fileName"></p>
-</div> -->
+<!-- EDIT Youtube FORM START -->
+<div class="modal" id="edit-youtube-modal">
+  <div class="form-header">
+    <h3>Edit Youtube Video</h3>
+    <span (click)="closeModal('edit', 'youtube-modal')">x</span>
+  </div>
+  <form #editYoutubePost="ngForm" (ngSubmit)="editVideo(editYoutubePost)" ngNativeValidate>
+    <div class="form-data">
+      <h4>Edit Youtube Link</h4>
+      <input
+        type="text"
+        ngModel="{{ editYoutube?.youtubeLink }}"
+        name="youtubeLink"
+        pattern="(?:https?:\/\/)?(?:www\.)?youtu(?:\.be\/|be.com\/\S*(?:watch|embed)(?:(?:(?=\/[-a-zA-Z0-9_]{11,}(?!\S))\/)|(?:\S*v=|v\/)))([-a-zA-Z0-9_]{11,})"
+        >
+    </div>
+    <div class="form-data">
+      <input type="hidden" name="postId" ngModel="{{ editYoutube?.postId }}">
+      <h4>Write a caption</h4>
+      <textarea name="message" ngModel="{{ editYoutube?.message }}" placeholder="Write a caption..." required rows="4"></textarea>
+    </div>
+    <div class="post-submit">
+      <button>Update</button>
+    </div>
+  </form>
+</div>
+<!-- EDIT YOUTUBE FORM END -->
+
+<!-- DELETE YOUTUBE FORM START -->
+<div class="modal" id="delete-youtube-modal">
+  <div class="form-header">
+    <h3>Delete Youtube Post</h3>
+    <span (click)="closeModal('delete','youtube-modal')">x</span>
+  </div>
+  <form (ngSubmit)="deleteVideo(deleteYoutube?.postId)">
+    <h2>Are you sure you want to delete this youtube post?</h2>
+    <span style="font-size: .8rem;">{{ deleteYoutube?.youtubeLink }}</span>
+    <span style="font-size: .8rem;">{{ deleteYoutube?.message }}</span>
+    <div class="post-submit">
+      <button id="deleteBtn">Delete</button>
+    </div>
+  </form>
+</div>
+<!-- DELETE YOUTUBE FORM END -->
