--- a/Revamedia/src/app/Components/profile/profile.component.html
+++ b/Revamedia/src/app/Components/profile/profile.component.html
@@ -22,12 +22,12 @@
       <div class="right-card">
         <!-- *ngIf="user?.username != currentUser?.username" -->
         <div class="right-card-container" *ngIf="user?.username != currentUser?.username">
-          <form #followForm="ngForm" (ngSubmit)="followUser(followForm)" *ngIf="isFollowing">
+          <form #followForm="ngForm" (ngSubmit)="followUser(followForm)">
             <input type="hidden" ngModel="{{ currentUser?.userId }}" name="followerId">
             <input type="hidden" ngModel="{{ user?.userId }}" name="followedId">
             <button>Follow</button>
           </form>
-          <form #unfollowForm="ngForm" (ngSubmit)="unfollowUser(unfollowForm)" *ngIf="!isFollowing">
+          <form #unfollowForm="ngForm" (ngSubmit)="unfollowUser(unfollowForm)">
             <input type="hidden" ngModel="{{ currentUser?.userId }}" name="followerId">
             <input type="hidden" ngModel="{{ user?.userId }}" name="followedId">
             <button id="unFollow">Unfollow</button>
