--- a/Revamedia/src/app/Components/profile/profile.component.scss
+++ b/Revamedia/src/app/Components/profile/profile.component.scss
@@ -151,7 +151,7 @@ $darkgrey: rgb(61,66,74);
 
     // USERS POSTS START
     .users-post{
-      margin: 1rem 0;
+      margin-top: 1rem;
       width: 90%;
       display: grid;
       grid-template-columns: repeat(3,1fr);
@@ -174,6 +174,49 @@ $darkgrey: rgb(61,66,74);
       // POST END
     }
     // USERS POSTS END
+    .shared-youtube-links-container{
+      width: 70%;
+      h5{
+        font-size: 1.5rem;
+        color: $darkgrey;
+        background-color: white;
+        border-radius: 3px;
+      }
+      .youtube-post-wrapper{
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+        .youtube-post{
+          margin-bottom: 1rem;
+          background: white;
+          border-radius: 9px;
+          border: 2px solid $orange;
+          padding: 1rem;
+          h3{
+            width: 100%;
+            font-size: 1.2rem;
+            color: $darkgrey;
+            a{
+              font-size: 1rem;
+              text-decoration: none;
+              color: $blue;
+              font-weight: normal;
+              &:hover{
+                text-decoration: underline;
+              }
+            }
+          }
+          p{
+            font-size: 1.1rem;
+            color: $darkgrey;
+            span{
+              font-weight: 600;
+              margin-right: 1rem;
+            }
+          }
+        }
+      }
+    }
 
   }
 }
