fixing dark mode for changes

--- a/Revamedia/src/app/Components/home/home.component.html
+++ b/Revamedia/src/app/Components/home/home.component.html
@@ -48,7 +48,7 @@
               </ul>
             </div>
           </div>
-          <div class="post-body">
+          <div class="post-body" id="post-body">
             <img src="{{ p?.image }}" alt="{{p?.image}}" *ngIf="p?.image !== null">
             <div class="youtube-link">
               <div class="youtube-logo">
