fixed dropdown issue
When user pressed on post options, all dropdowns in every post would open due to a simple solution to toggle the view. I ended up removing it and putting the buttons directly in so there is no dropdown

--- a/Revamedia/src/app/Components/home/home.component.html
+++ b/Revamedia/src/app/Components/home/home.component.html
@@ -39,13 +39,10 @@
               <a (click)="goToProfile(user?.userId)">{{ user?.username }}</a>
             </div>
             <div class="post-options">
-              <fa-icon (click)="togglePostsOptions()" id="icon" [icon]="faEllipsis"></fa-icon>
-              <ul *ngIf="postsOptionsClicked" id="postOptionMenu">
-                <li (click)="openModal('edit','post-modal', p)" *ngIf="p?.image !== null">Edit Post</li>
-                <li (click)="openModal('delete', 'post-modal', p)" *ngIf="p?.image !== null">Delete Post</li>
-                <li (click)="openModal('edit', 'youtube-modal', p)" *ngIf="p?.image === null">Edit Post</li>
-                <li (click)="openModal('delete', 'youtube-modal', p)" *ngIf="p?.image === null">Delete Post</li>
-              </ul>
+              <fa-icon (click)="openModal('edit','post-modal', p)" *ngIf="p?.image !== null"  id="editIcon" [icon]="faPenToSquare"></fa-icon>
+              <fa-icon (click)="openModal('delete', 'post-modal', p)" *ngIf="p?.image !== null"   id="trashIcon" [icon]="faTrashCan"></fa-icon>
+              <fa-icon (click)="openModal('edit', 'youtube-modal', p)" *ngIf="p?.image === null" id="editIcon" [icon]="faPenToSquare"></fa-icon>
+              <fa-icon (click)="openModal('delete', 'youtube-modal', p)" *ngIf="p?.image === null" id="trashIcon" [icon]="faTrashCan"></fa-icon>
             </div>
           </div>
           <div class="post-body" id="post-body">
