--- a/Revamedia/src/app/Components/home/home.component.scss
+++ b/Revamedia/src/app/Components/home/home.component.scss
@@ -143,7 +143,7 @@ $darkgrey: rgb(61, 66, 74);
           border-radius: 5px;
           border: none;
           outline: none;
-          padding: .5rem;
+          padding: .25rem .5rem;
           cursor: pointer;
           color: black;
           transition: all .3s ease-in-out;
@@ -154,17 +154,17 @@ $darkgrey: rgb(61, 66, 74);
         #share-youtube{
           margin-left: 2rem;
           border: none;
-          background: rgb(193, 0, 0);
+          background: $blue;
           font-size: 1rem;
           border-radius: 5px;
           border: none;
           outline: none;
-          padding: .5rem;
+          padding: .25rem .5rem;
           cursor: pointer;
           color: white;
           transition: all .3s ease-in-out;
           &:hover {
-            background: rgb(127, 0, 0);
+            background: $orange;
           }
         }
       }
@@ -293,35 +293,23 @@ $darkgrey: rgb(61, 66, 74);
 
           .post-options {
             display: flex;
-            flex-direction: column;
+            flex-direction: row;
             align-items: flex-end;
-
-            #icon {
-              color: $darkgrey;
-              font-size: 1.5rem;
+            #editIcon{
+              color: $blue;
+              font-size: 1.2rem;
               cursor: pointer;
+              &:hover{
+                color: #408eae;
+              }
             }
-
-            ul {
-              border: 1px solid $grey;
-              position: absolute;
-              transform: translate(-23%, 12%);
-              list-style: none;
-              background-color: $lightgrey;
-              border-radius: 3px;
-
-              li {
-                background-color: $lightgrey;
-                margin: .75rem 0;
-                width: 100%;
-                padding: .25rem;
-                text-align: center;
-                color: #000;
-                cursor: pointer;
-
-                &:hover {
-                  background-color: $grey;
-                }
+            #trashIcon{
+              cursor: pointer;
+              margin-left: 1rem;
+              color: $orange;
+              font-size: 1.2rem;
+              &:hover{
+                color: #cb8836;
               }
             }
           }
