I need a break rn

--- a/Revamedia/src/app/Components/home/home.component.html
+++ b/Revamedia/src/app/Components/home/home.component.html
@@ -16,7 +16,8 @@
         <div class="users-list" *ngIf="allUsers.length != 0">
           <div *ngFor="let u of allUsers" class="userFound">
             <div class="user" (click)="goToProfile(u?.userId)" title="View {{u?.username}}'s Profile">
-              <p>{{u?.firstName +" "+ u?.lastName}}</p>
+              <!-- <p>{{u?.firstName +" "+ u?.lastName}}</p> -->
+              <p>{{u?.username}}</p>
             </div>
           </div>
         </div>
