--- a/Revamedia/src/app/Components/navbar/navbar.component.scss
+++ b/Revamedia/src/app/Components/navbar/navbar.component.scss
@@ -16,7 +16,7 @@ $darkgrey: rgb(61,66,74);
   ul{
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
+    justify-content: space-around;
     list-style: none;
     width: 100%;
     height: 100%;
