--- a/Revamedia/src/app/Components/profile/profile.component.html
+++ b/Revamedia/src/app/Components/profile/profile.component.html
@@ -38,17 +38,17 @@
       </div>
     </div>
 
-    <h4 class="profile-posts-title" id="setBackgroundColor" *ngIf="user?.postsOwned.length != 0">{{ user?.username }}'s Posts</h4>
+    <h4 class="profile-posts-title" id="setBackgroundColor" *ngIf="posts.length != 0">{{ user?.username }}'s Posts</h4>
     <div class="users-post">
-      <div class="post" *ngFor="let post of user?.postsOwned">
+      <div class="post" *ngFor="let post of posts">
         <img *ngIf="post?.image !== null" src="{{ post?.image }}" alt="{{ post?.image }}">
         <span *ngIf="post?.image !== null">{{ post?.message }}</span>
       </div>
     </div>
 
     <div class="shared-youtube-links-container">
-      <h5>Shared Youtube Links</h5>
-      <div class="youtube-post-wrapper" *ngFor="let post of user?.postsOwned">
+      <h5 *ngIf="posts.length != 0">Shared Youtube Links</h5>
+      <div class="youtube-post-wrapper" *ngFor="let post of posts">
         <div class="youtube-post" *ngIf="post?.image === null" id="post-body">
           <div class="youtube-link">
             <div class="youtube-logo">
@@ -62,7 +62,7 @@
     </div>
 
     <!-- NO POST AVAILABLE START-->
-    <div class="noPost" *ngIf="user?.postsOwned.length == 0">
+    <div class="noPost" *ngIf="posts.length == 0">
       <h1>No Post</h1>
       <p>Seems like {{ user?.username }} doesn't have any posts.</p>
     </div>
